--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27",
         "bootstrap": "^5.2.1",
+        "deepmerge": "^4.2.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "sass": "^1.32.11",
-        "vite": "^3.0.0"
-    }
+        "sass": "^1.56.1",
+        "sass-loader": "^13.2.0",
+        "vite": "^3.0.0",
+        "vue": "^2.7.14"
+    },
+    "dependencies": {
+        "fs": "^0.0.1-security",
+        "pinia": "^2.0.27",
+        "vue-loader": "^17.0.1",
+        "vuetify": "^2.6.12"
+    },
+    "type": "module"
 }
