--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "@vitejs/plugin-vue2": "^2.1.0",
+        "@vitejs/plugin-vue2": "^2.2.0",
         "axios": "^0.27",
         "bootstrap": "^5.2.1",
         "deepmerge": "^4.2.2",
@@ -15,13 +15,16 @@
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "sass-loader": "^13.2.0",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.4",
         "vite": "^3.0.0",
         "vue": "^2.7.1"
     },
     "dependencies": {
-        "@vitejs/plugin-vue2": "^2.1.0",
         "fs": "^0.0.1-security",
         "pinia": "^2.0.27",
+        "require": "^2.4.20",
+        "requirejs": "^2.3.6",
         "vue-loader": "^17.0.1",
         "vuetify": "^2.6.12"
     },
